--- a/test_2025_08/前端代码/html/demo1.html
+++ b/test_2025_08/前端代码/html/demo1.html
@@ -9,7 +9,7 @@
 
 <body>
     <!-- <h1>我是H1标签</h1> -->
-
+    <!-- 
     <p>
         &nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita voluptatum eligendi
         ea ex provident fuga
@@ -17,10 +17,32 @@
         inventore.
     </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus hic illo magni veritatis quas nostrum, non vero
-        voluptatem deleniti rerum nobis cupiditate explicabo aliquid autem nisi? Consectetur aliquid eum libero.</p>
+        voluptatem deleniti rerum nobis cupiditate explicabo aliquid autem nisi? Consectetur aliquid eum libero.</p> -->
 
-    <img src="../html/pic/QQ图片20230929114712.jpg" alt="这是一个图片" width="200px">
-    <a href="https://edu.bitejiuyeke.com/index" target="_blank">比特</a>
+    <!-- <img src="../html/pic/QQ图片20230929114712.jpg" alt="这是一个图片" width="200px">
+    <a href="https://edu.bitejiuyeke.com/index" target="_blank">比 b特</a> -->
+    <!-- <a href="Demo2.html" target="_blank">Demo2</a> -->
+
+    <table style="width: 500px; height: 400px;" border="1px red" cellspacing="0">
+        <tr>
+            <!-- 列合并 -->
+            <td colspan="2">aaa</td>
+            <!-- <td>bbb</td> -->
+        </tr>
+        <tr>
+            <td>ccc</td>
+            <td rowspan="3">ddd</td>
+            <!-- 行合并 -->
+        </tr>
+        <tr>
+            <td>eee</td>
+            <!-- <td>fff</td> -->
+        </tr>
+        <tr>
+            <td>ggg</td>
+            <!-- <td>hhh</td> -->
+        </tr>
+    </table>
 </body>
 
 </html>
