--- a/test_2025_08/前端代码/html/Demo2.html
+++ b/test_2025_08/前端代码/html/Demo2.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <a href="https://www.baidu.com">百度</a>
+    <a href="https://www.baidu.com" target="_blank">百度</a>
 </body>
 
 </html>
