--- a/test_2025_08/后端代码/spring-bootdemo2/src/main/resources/static/aa/login.html
+++ b/test_2025_08/后端代码/spring-bootdemo2/src/main/resources/static/aa/login.html
@@ -16,6 +16,10 @@
     function login() {
     $.ajax({
       //对象
+      //1.请求方式
+      //2.请求路径
+      //3.请求参数
+      //4.界面返回结果
       type:"post",//请i求放肆
       url:"/user/login",//请求路径
       //请求的参数
