--- a/test_2025_08/后端代码/springboot-deom/src/main/resources/static/book_list.html
+++ b/test_2025_08/后端代码/springboot-deom/src/main/resources/static/book_list.html
@@ -39,70 +39,70 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>
-                    <td>1</td>
-                    <td>大秦帝国第一册</td>
-                    <td>我是作者</td>
-                    <td>23</td>
-                    <td>33.00</td>
-                    <td>北京出版社</td>
-                    <td>可借阅</td>
-                    <td>
-                        <div class="op">
-                            <a href="book_update.html?bookId=1">修改</a>
-                            <a href="javascript:void(0)" onclick="deleteBook(1)">删除</a>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>
-                    <td>2</td>
-                    <td>大秦帝国第二册</td>
-                    <td>我是作者</td>
-                    <td>23</td>
-                    <td>33.00</td>
-                    <td>北京出版社</td>
-                    <td>可借阅</td>
-                    <td>
-                        <div class="op">
-                            <a href="book_update.html?bookId=2">修改</a>
-                            <a href="javascript:void(0)" onclick="deleteBook(2)">删除</a>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>
-                    <td>3</td>
-                    <td>大秦帝国第三册</td>
-                    <td>我是作者</td>
-                    <td>23</td>
-                    <td>33.00</td>
-                    <td>北京出版社</td>
-                    <td>可借阅</td>
-                    <td>
-                        <div class="op">
-                            <a href="book_update.html?bookId=3">修改</a>
-                            <a href="javascript:void(0)" onclick="deleteBook(3)">删除</a>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>
-                    <td>4</td>
-                    <td>大秦帝国第四册</td>
-                    <td>我是作者</td>
-                    <td>23</td>
-                    <td>33.00</td>
-                    <td>北京出版社</td>
-                    <td>可借阅</td>
-                    <td>
-                        <div class="op">
-                            <a href="book_update.html?bookId=4">修改</a>
-                            <a href="javascript:void(0)" onclick="deleteBook(4)">删除</a>
-                        </div>
-                    </td>
-                </tr>
+<!--                <tr>-->
+<!--                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>-->
+<!--                    <td>1</td>-->
+<!--                    <td>大秦帝国第一册</td>-->
+<!--                    <td>我是作者</td>-->
+<!--                    <td>23</td>-->
+<!--                    <td>33.00</td>-->
+<!--                    <td>北京出版社</td>-->
+<!--                    <td>可借阅</td>-->
+<!--                    <td>-->
+<!--                        <div class="op">-->
+<!--                            <a href="book_update.html?bookId=1">修改</a>-->
+<!--                            <a href="javascript:void(0)" onclick="deleteBook(1)">删除</a>-->
+<!--                        </div>-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>-->
+<!--                    <td>2</td>-->
+<!--                    <td>大秦帝国第二册</td>-->
+<!--                    <td>我是作者</td>-->
+<!--                    <td>23</td>-->
+<!--                    <td>33.00</td>-->
+<!--                    <td>北京出版社</td>-->
+<!--                    <td>可借阅</td>-->
+<!--                    <td>-->
+<!--                        <div class="op">-->
+<!--                            <a href="book_update.html?bookId=2">修改</a>-->
+<!--                            <a href="javascript:void(0)" onclick="deleteBook(2)">删除</a>-->
+<!--                        </div>-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>-->
+<!--                    <td>3</td>-->
+<!--                    <td>大秦帝国第三册</td>-->
+<!--                    <td>我是作者</td>-->
+<!--                    <td>23</td>-->
+<!--                    <td>33.00</td>-->
+<!--                    <td>北京出版社</td>-->
+<!--                    <td>可借阅</td>-->
+<!--                    <td>-->
+<!--                        <div class="op">-->
+<!--                            <a href="book_update.html?bookId=3">修改</a>-->
+<!--                            <a href="javascript:void(0)" onclick="deleteBook(3)">删除</a>-->
+<!--                        </div>-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <td><input type="checkbox" name="selectBook" value="1" id="selectBook" class="book-select"></td>-->
+<!--                    <td>4</td>-->
+<!--                    <td>大秦帝国第四册</td>-->
+<!--                    <td>我是作者</td>-->
+<!--                    <td>23</td>-->
+<!--                    <td>33.00</td>-->
+<!--                    <td>北京出版社</td>-->
+<!--                    <td>可借阅</td>-->
+<!--                    <td>-->
+<!--                        <div class="op">-->
+<!--                            <a href="book_update.html?bookId=4">修改</a>-->
+<!--                            <a href="javascript:void(0)" onclick="deleteBook(4)">删除</a>-->
+<!--                        </div>-->
+<!--                    </td>-->
+<!--                </tr>-->
             </tbody>
         </table>
 
@@ -113,7 +113,32 @@
 
             getBookList();
             function getBookList() {
-                
+                $.ajax({
+                    type:"get",
+                    url:"/book/getList",
+                    success:function (books){
+                        var fianalHtml="";
+                        for (var book of books){
+                            fianalHtml+='<tr>';
+                            fianalHtml+='<td><input type="checkbox" name="selectBook" value="'+book.bookId+'" id="selectBook" class="book-select"></td>';
+                            fianalHtml+='<td>'+book.bookId+'</td>';
+                            fianalHtml+='<td>'+book.bookName+'</td>';
+                            fianalHtml+='<td>'+book.author+'</td>';
+                            fianalHtml+='<td>'+book.num+'</td>';
+                            fianalHtml+='<td>'+book.price+'</td>';
+                            fianalHtml+='<td>'+book.publish+'</td>';
+                            fianalHtml+='<td>'+book.statuscn+'</td>';
+                            fianalHtml+='<td><div class="op">';
+                            fianalHtml+='<a href="book_update.html?bookId='+book.bookId+'">修改</a>';
+                            fianalHtml+='<a href="javascript:void(0)" onclick="deleteBook('+book.bookId+')">删除</a>';
+                            fianalHtml+='</div>';
+                            fianalHtml+='</td>';
+                            fianalHtml+='</tr>';
+                        }
+                        $("tbody").html(fianalHtml)
+                    }
+
+                })
             }
     
             //翻页信息
