--- a/test_2025_08/后端代码/bookmanagement/src/main/resources/static/login.html
+++ b/test_2025_08/后端代码/bookmanagement/src/main/resources/static/login.html
@@ -37,13 +37,13 @@
                 type:"post",
                 url:"/user/login",
                 data:{
-                    username:$("#userName").val(),
+                    name:$("#userName").val(),
                     password:$("#password").val()
                 },
                 success:function (result){
                     if (result){
                         //账号密码正确
-                         location.href = "book_list.html";
+                         location.href = "book_list.html?currentPage=1";
                     }
                     else {
                         alert("账号或密码错误!")
