--- a/test_2025_08/后端代码/bookmanagement/src/main/resources/static/book_list.html
+++ b/test_2025_08/后端代码/bookmanagement/src/main/resources/static/book_list.html
@@ -166,6 +166,13 @@
 
                             }
                         });
+                    },
+                    error:function (error){
+                        if (error.status==401){
+                            alert("用户未登录，请先登录")
+                            location.href="login.html"
+                        }
+                        console.log(error)//拦截所有请求
                     }
                 })
             }
