控制器和统一数据，异常处理

--- a/test_2025_08/后端代码/bookmanagement/src/main/resources/static/book_add.html
+++ b/test_2025_08/后端代码/bookmanagement/src/main/resources/static/book_add.html
@@ -69,14 +69,20 @@
                 url:"/book/addBook",
                 data:$("#addBook").serialize(),
                 success:function (result){
-                    if (result==""){
+                    if (result.code=="SUCCESS"&&result.data==""){
                         location.href="book_list.html"
                     }else {
                         //失败
-                        alert(result)
+                        alert(result.errMsg)
                     }
 
-                }
+                },
+                error:function(error){
+                    if (error.status==401){
+                        //用户未登录
+                        location.href="login.html"
+                    }
+            }
             })
 
             //     data:{
