--- a/test_2025_08/后端代码/bookmanagement/src/main/resources/static/login.html
+++ b/test_2025_08/后端代码/bookmanagement/src/main/resources/static/login.html
@@ -41,7 +41,7 @@
                     password:$("#password").val()
                 },
                 success:function (result){
-                    if (result){
+                    if (result.code=="SUCCESS"&&result.data==true){
                         //账号密码正确
                          location.href = "book_list.html?currentPage=1";
                     }
