--- a/test_2025_09/后端代码/spring-blog-demo/src/main/resources/static/blog_list.html
+++ b/test_2025_09/后端代码/spring-blog-demo/src/main/resources/static/blog_list.html
@@ -23,8 +23,8 @@
     <div class="container">
         <div class="left">
             <div class="card">
-                <img src="pic/doge.jpg" alt="">
-                <h3>伯明翰</h3>
+                <img src="pic/头像.jpg" alt="">
+                <h3></h3>
                 <a href="#">GitHub 地址</a>
                 <div class="row">
                     <span>文章</span>
@@ -43,27 +43,45 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/common.js"></script>
 <script>
+        getBlogList();
+        var url="/user/getUserInfo?userId="+localStorage.getItem("loginUserId")
+        getUserInfo(url);
+        function getBlogList(){
+            $.ajax({
+                type:"get",
+                url:"/blog/getList",
+                success:function (result){
+                    if (result.code=="SUCCESS"&&result.data!=null&& result.data.length>0){
+                        var  finalHtml="";
+                        for (var blogInfo of result.data){
+                            finalHtml+='<div class="blog">';
+                            finalHtml+='<div class="title">'+blogInfo.title+'</div>';
+                            finalHtml+='<div class="date">'+blogInfo.createTime+'</div>';
+                            finalHtml+='<div class="desc">'+blogInfo.content+'</div>';
+                            finalHtml+='<a class="detail" href="blog_detail.html?blogId='+blogInfo.id+'">查看全文&gt;&gt;</a>';
+                            finalHtml+='</div>';
 
-    $.ajax({
-        type:"get",
-        url:"/blog/getList",
-        success:function (result){
-            if (result.code=="SUCCESS"&&result.data!=null&& result.data.length>0){
-                var  finalHtml="";
-                for (var blogInfo of result.data){
-                    finalHtml+='<div class="blog">';
-                    finalHtml+='<div class="title">'+blogInfo.title+'</div>';
-                    finalHtml+='<div class="date">'+blogInfo.createTime+'</div>';
-                    finalHtml+='<div class="desc">'+blogInfo.content+'</div>';
-                    finalHtml+='<a class="detail" href="blog_detail.html?blogId='+blogInfo.id+'">查看全文&gt;&gt;</a>';
-                    finalHtml+='</div>';
+                        }
+                        $(".right").html(finalHtml);
 
+                    }
                 }
-                $(".right").html(finalHtml);
-
-            }
+            })
         }
-    })
+        // function getUserInfo(){
+        //     $.ajax({
+        //         type: "get",
+        //         url: "/user/getUserInfo?userId="+localStorage.getItem("loginUserId"),
+        //         success:function (result){
+        //             if (result!=null&&result.code=="SUCCESS"&&result.data!=null){
+        //                 var userInfo=result.data;
+        //                 $(".card h3").text(userInfo.userName);
+        //                 $(".left .card a").attr("href",userInfo.githubUrl);
+        //             }
+        //         }
+        //     })
+        // }
+
 </script>
 </body>
 </html>
