--- a/test_2025_09/后端代码/spring-blog-demo/src/main/resources/static/blog_login.html
+++ b/test_2025_09/后端代码/spring-blog-demo/src/main/resources/static/blog_login.html
@@ -33,7 +33,10 @@
                 <input type="password" name="password" id="password">
             </div>
             <div class="row">
-                <button id="submit" onclick="login()">提交</button>
+                <button id="submit" class="btn-submit" onclick="login()">提交</button>
+            </div>
+            <div class="row">
+                <button id="register" class="btn-submit mt10" onclick="register()">注册</button>
             </div>
 
         </div>
@@ -63,6 +66,10 @@
             })
 
         }
+        function register(){
+            location.href="blog_register.html"
+        }
+
     </script>
 </body>
 
